security: critical security fixes and hardening
P0 Security Fixes:
- Remove hardcoded admin password fallback (require ADMIN_PASSWORD env var)
- Remove query parameter auth from vault routes (security risk - query strings get logged)
- Remove secret_vault.json from git tracking
- Fix JWT_SECRET to fail-fast in production mode
- Replace execSync with spawn in /api/control for non-blocking cross-platform execution

P1 Reliability:
- Remove unreachable code in server/users.ts
- Improve error handling in /api/control endpoint

P2 Repo Hygiene:
- Update .gitignore to exclude runtime logs (.aurora/, .aurora_knowledge/, *.jsonl)
- Exclude vault secure files from git tracking

All admin keys now stored in memory only (no localStorage persistence).
Vault auth now supports Bearer tokens and x-api-key header only (no query params).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,5 +52,4 @@ jobs:
       run: npm run build || echo "⚠️ Build completed with warnings"
 
     - name: Run tests
-      continue-on-error: true
-      run: pytest tests/ -v --maxfail=5 || echo "⚠️ Some tests failed"
+      run: pytest tests/ -v --maxfail=5
