--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,7 @@ jobs:
 
       - name: Run Python tests
         run: |
-          pytest tests/ -v --cov --cov-report=xml --cov-report=term --maxfail=5 || echo "⚠️ Some tests failed"
-        continue-on-error: true
+          pytest tests/ -v --cov --cov-report=xml --cov-report=term --maxfail=5
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
